--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,9 @@ org.gradle.parallel=true
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = com.teamabode
-	archives_base_name = template
+	archives_base_name = guarding
 
 # Dependencies
 	fabric_version=0.79.0+1.19.4
 	scribe_version=0.1.0+1.19.4
+	parchment_version=1.19.3:2023.03.12
