--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,6 @@ org.gradle.parallel=true
 
 # Dependencies
 	fabric_version=0.79.0+1.19.4
+	scribe_version=0.3.1
 	parchment_version=1.19.3:2023.03.12
 	fabric_asm_version=v2.3
