--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,16 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
+	minecraft_version=1.20
 	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 2.3.0
 	maven_group = com.teamabode
 	archives_base_name = guarding
 
 # Dependencies
-	fabric_version=0.79.0+1.19.4
-	scribe_version=0.3.5
+	fabric_version=0.83.0+1.20
+	scribe_version=1.20-0.4.1
 	parchment_version=1.19.3:2023.03.12
 	fabric_asm_version=v2.3
