--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ repositories {
 	maven {
 		url = uri("https://maven.pkg.github.com/team-abode/scribe-wip")
 		credentials {
-			username = "ExDrill"
-			password = "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"
+			username = System.getenv("GITHUB_USER")
+			password = System.getenv("GITHUB_TOKEN")
 		}
 	}
 }
