--- a/build.gradle
+++ b/build.gradle
@@ -13,16 +13,6 @@ repositories {
 	}
 	maven {
 		url = 'https://jitpack.io'
-		content {
-			includeGroup "com.github.Chocohead"
-		}
-	}
-	maven {
-		url = uri("https://maven.pkg.github.com/team-abode/scribe-wip")
-		credentials {
-			username = System.getenv("GITHUB_USER")
-			password = System.getenv("GITHUB_TOKEN")
-		}
 	}
 }
 
@@ -42,8 +32,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	// Scribe
-	modApi "com.teamabode:scribe:${rootProject.scribe_version}"
-	include "com.teamabode:scribe:${rootProject.scribe_version}"
+	modApi "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
+	include "com.github.Team-Abode:scribe:${rootProject.scribe_version}"
 
 	// Fabric ASM
 	modImplementation "com.github.Chocohead:Fabric-ASM:${fabric_asm_version}"
