--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ org.gradle.parallel=true
 	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 2.3.1
+	mod_version = 2.3.2
 	maven_group = com.teamabode
 	archives_base_name = guarding
 
 # Dependencies
 	fabric_version=0.86.1+1.20.1
-	scribe_version=1.20.1-0.4.8
+	scribe_version=1.20.1-0.5.0-alpha
 	parchment_version=1.20.1:2023.07.23
 	fabric_asm_version=v2.3
